--- a/composer.json
+++ b/composer.json
@@ -34,11 +34,6 @@
             "App\\": "src/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Tests\\": "tests/"
-        }
-    },
     "replace": {
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
@@ -68,5 +63,11 @@
             "allow-contrib": false,
             "require": "6.3.*"
         }
-    }
+    },
+    "authors": [
+        {
+            "name": "Liam Gattegno",
+            "email": "liam.gattegno@efrei.net"
+        }
+    ]
 }
